Composerfile – noch ein Update

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,10 @@
         {
             "type": "composer",
             "url": "http://fluidtypo3.github.io/composer-repo/"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/Ecodev/fluidbootstraptheme.git"
         }
     ],
     "require": {
